syntax = "proto3";

package greeter;

message CreateShortUrlRequest {
  string fullUrl = 1;
}

message CreateShortUrlResponse {
  string shortUrl = 1;
}

message GetUrlRequest {
  string shortUrl = 1;
}

message GetUrlResponse {
  string fullUrl = 1;
}

service Greeter {
  rpc CreateShortUrl (CreateShortUrlRequest) returns (CreateShortUrlResponse);
  rpc GetUrl (GetUrlRequest) returns (GetUrlResponse);
}
